--- a/playwright-scraping/package.json
+++ b/playwright-scraping/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
+    "@mastra/core": "^0.9.4",
+    "@mastra/mcp": "^0.5.0",
     "dotenv": "^16.5.0",
     "next": "latest",
     "react": "latest",
