--- a/slack_news/package.json
+++ b/slack_news/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "start": "npx tsx src/server.ts",
-    "dev": "nodemon server.ts"
+    "dev": "nodemon server.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.18",
@@ -13,10 +14,12 @@
     "@mastra/core": "latest",
     "@mastra/mcp": "latest",
     "@playwright/test": "^1.52.0",
+    "ai": "^4.3.16",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^5.1.0",
+    "hono-mcp-server-sse-transport": "^0.0.7",
     "p-throttle": "^7.0.0",
     "zod": "^3.22.2"
   },
