--- a/playwright-test/.gitignore
+++ b/playwright-test/.gitignore
@@ -1,8 +1,49 @@
-output.txt
-node_modules
-dist
-.mastra
-.env.development
+# Dependencies
+node_modules/
+
+# Environment variables
 .env
+.env.local
+.env.*.local
+
+# Build outputs
+.mastra/
+dist/
+build/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# TypeScript
+*.tsbuildinfo
+
+# Test coverage
+coverage/
+.nyc_output/
+
+# Temporary files
+tmp/
+temp/
+
+# Database files
 *.db
-*.db-*
+*.sqlite
+mastra.db
+
+# OS files
+Thumbs.db
+
+package-lock.json
